...
    <string name="location_nuremberg_terminal">Nuremberg Terminal</string>
    <string name="location_bremen_port">Bremen Port</string>
    <string name="location_kiel_dock">Kiel Dock</string>
    <string name="location_berlin_hub">Berlin Hub</string>
    <string name="location_magdeburg_depot">Magdeburg Depot</string>
    <string name="location_stuttgart_terminal">Stuttgart Terminal</string>
    <string name="location_freiburg_hub">Freiburg Hub</string>
    <string name="company_vehicle_types">Distinct owned vehicle types</string>
    <string name="target_vehicle_types">Diversify your owned fleet</string>
    <string name="map_city_munich">Munich</string>
    <string name="map_city_nuremberg">Nuremberg</string>
    <string name="map_city_bremen">Bremen</string>
    <string name="map_city_kiel">Kiel</string>
    <string name="map_city_berlin">Berlin</string>
...
